--- a/Accueil.html
+++ b/Accueil.html
@@ -35,7 +35,7 @@
         }
 
         .header h2:hover {
-            color: rgb(0, 20, 200);
+            color: mediumblue;
         }
 
         .header .menu {
@@ -59,15 +59,15 @@
 
         .header a:hover {
             box-shadow: 0 0 3px black;
-            border-radius: 10px;
-            color: rgb(0, 20, 200);
+            border-radius: 5px;
+            color: rgb(0, 10, 200);
             text-decoration: underline;
         }
 
         .main-content {
             text-align: center;
             margin-top: 20px;
-            border-radius: 10px;
+            border-radius: 15px;
             box-shadow: 0 0 1px silver;
             position: absolute;
             left: 50%;
