--- a/Couleurs Et Code.html
+++ b/Couleurs Et Code.html
@@ -34,7 +34,7 @@
         }
 
         .header h2:hover {
-            color: rgb(0, 20, 200);
+            color: mediumblue;
         }
 
         .header .menu {
@@ -58,14 +58,14 @@
 
         .header a:hover {
             box-shadow: 0 0 3px black;
-            border-radius: 10px;
-            color: rgb(0, 20, 200);
+            border-radius: 5px;
+            color: rgb(0, 10, 200);
             text-decoration: underline;
         }
 
         .a1,
         .a2 {
-            font-size: 20px;
+            font-size: 18px;
             font-weight: bold;
             color: black;
             text-decoration: none;
@@ -76,8 +76,8 @@
         .a1:hover,
         .a2:hover {
             box-shadow: 0 0 3px black;
-            border-radius: 10px;
-            color: rgb(0, 20, 200);
+            border-radius: 5px;
+            color: rgb(0, 10, 200);
             text-decoration: underline;
         }
 
@@ -88,6 +88,7 @@
             margin: 20px auto;
             color: black;
             background-color: silver;
+            box-shadow: 0 0 1px silver;
             border-radius: 15px;
             padding: 15px;
             font-size: 30px;
@@ -97,10 +98,11 @@
 
         #color-display {
             font-size: 20px;
-            border-radius: 10px;
+            border-radius: 5px;
             border: 2px double black;
+            background-color: LightGray;
             padding: 8px;
-            box-shadow: 0 0 1px black;
+            box-shadow: 0 0 1px LightGray;
         }
 
         #color-display:hover {
@@ -134,7 +136,7 @@
             height: 75px;
             border-radius: 50%;
             margin: 20px 20px 0 20px;
-            transition: transform 0.2s;
+            transition: 0.2s;
         }
 
         .color-circle:hover {
