--- a/Plus De Couleurs.html
+++ b/Plus De Couleurs.html
@@ -35,7 +35,7 @@
         }
 
         .header h2:hover {
-            color: rgb(0, 20, 200);
+            color: mediumblue;
         }
 
         .header .menu {
@@ -59,8 +59,8 @@
 
         .header a:hover {
             box-shadow: 0 0 3px black;
-            border-radius: 10px;
-            color: rgb(0, 20, 200);
+            border-radius: 5px;
+            color: rgb(0, 10, 200);
             text-decoration: underline;
         }
 
@@ -91,21 +91,23 @@
             width: 85%;
             padding: 25px;
             border-radius: 15px;
-            background-color: rgb(190, 190, 190);
-            box-shadow: 0 0 1px rgb(190, 190, 190);
+            background-color: silver;
+            box-shadow: 0 0 1px silver;
         }
 
         .circle {
             width: 100px;
             height: 100px;
-            border-radius: 50%;
             display: inline-block;
+            border-radius: 50%;
             margin: 16px;
             line-height: 100px;
             color: white;
             text-align: center;
             font-weight: bolder;
             transition: 0.2s;
+            background-color: lightgray;
+            box-shadow: 0 0 1px lightgray;
         }
 
 
