--- a/Calculatrice.html
+++ b/Calculatrice.html
@@ -35,7 +35,7 @@
         }
 
         .header h2:hover {
-            color: rgb(0, 20, 200);
+            color: mediumblue;
         }
 
         .header .menu {
@@ -59,10 +59,63 @@
 
         .header a:hover {
             box-shadow: 0 0 3px black;
-            border-radius: 10px;
-            color: rgb(0, 20, 200);
+            border-radius: 5px;
+            color: rgb(0, 10, 200);
             text-decoration: underline;
         }
+
+        .calculatrice {
+            position: absolute;
+            bottom: 65px;
+            left: 490px;
+            padding: 20px;
+            border-radius: 15px;
+            background-color: silver;
+            box-shadow: 0 0 1px silver;
+            display: grid;
+            width: 300px;
+            height: 400px;
+            justify-items: center;
+            align-items: center;
+        }
+
+        .calculatrice input[type="text"] {
+            width: 100%;
+            height: 35px;
+            font-size: 22px;
+            border: none;
+            border-radius: 10px;
+            background-color: ghostwhite;
+            box-shadow: 0 0 1px ghostwhite;
+            cursor: pointer;
+            margin-bottom: 10px;
+            padding-left: 2px;
+        }
+
+        .calculatrice input[type="text"]:hover {
+            box-shadow: 0 0 3px black;
+        }
+
+        .calculatrice input[type="button"] {
+            border-radius: 5px;
+            background-color: GhostWhite;
+            box-shadow: 0 0 1px GhostWhite;
+            border: 0;
+            margin: 5px;
+            padding: 7px;
+            transition: 0.2s;
+            width: 60px;
+            height: 45px;
+            font-size: 20px;
+        }
+
+        .calculatrice input[type="button"]:hover {
+            box-shadow: 0 0 3px black;
+            color: rgba(45, 150, 45);
+        }
+
+
+
 
 
 
@@ -164,6 +217,62 @@
         </div>
     </div>
 
+
+
+    <div class="calculatrice">
+        <input type="text" id="display" name="display" readonly>
+        <div>
+            <input type="button" value="Ac" onclick="clearDisplay()">
+            <input type="button" value="%" onclick="appendToDisplay('%')">
+            <input type="button" value="Sup" onclick="backspace()">
+            <input type="button" value="/" onclick="appendToDisplay('/')">
+        </div>
+        <div>
+            <input type="button" value="7" onclick="appendToDisplay('7')">
+            <input type="button" value="8" onclick="appendToDisplay('8')">
+            <input type="button" value="9" onclick="appendToDisplay('9')">
+            <input type="button" value="*" onclick="appendToDisplay('*')">
+        </div>
+        <div>
+            <input type="button" value="4" onclick="appendToDisplay('4')">
+            <input type="button" value="5" onclick="appendToDisplay('5')">
+            <input type="button" value="6" onclick="appendToDisplay('6')">
+            <input type="button" value="-" onclick="appendToDisplay('-')">
+        </div>
+        <div>
+            <input type="button" value="1" onclick="appendToDisplay('1')">
+            <input type="button" value="2" onclick="appendToDisplay('2')">
+            <input type="button" value="3" onclick="appendToDisplay('3')">
+            <input type="button" value="+" onclick="appendToDisplay('+')">
+        </div>
+        <div>
+            <input type="button" value="00" onclick="appendToDisplay('00')">
+            <input type="button" value="0" onclick="appendToDisplay('0')">
+            <input type="button" value="." onclick="appendToDisplay('.')">
+            <input type="button" value="=" onclick="calculate()">
+        </div>
+    </div>
+
 </body>
 
 </html>
+
+<script>
+    function appendToDisplay(value) {
+        document.getElementById('display').value += value;
+    }
+
+    function clearDisplay() {
+        document.getElementById('display').value = '';
+    }
+
+    function backspace() {
+        let currentValue = document.getElementById('display').value;
+        document.getElementById('display').value = currentValue.slice(0, -1);
+    }
+
+    function calculate() {
+        let result = eval(document.getElementById('display').value);
+        document.getElementById('display').value = result;
+    }
+</script>
