--- a/Calculatrice.html
+++ b/Calculatrice.html
@@ -208,11 +208,11 @@
         <h2><span style="color: MediumBlue;">M</span>on <span style="color: MediumBlue;">A</span>ccueil <span
                 style="color: MediumBlue;">I</span>yr</h2>
         <div class="menu">
-            <a href="C:\Users\Administrator\Desktop\Mon Info IYR\Mon HTML CSS JS\Mon 1Siteweb\Accueil.html">Mon
+            <a href="index.html">Mon
                 Accueil</a>
-            <a href="C:\Users\Administrator\Desktop\Mon Info IYR\Mon HTML CSS JS\Mon 1Siteweb\Couleurs Et Code.html">Color
+            <a href="Couleurs Et Code.html">Color
                 Et Code Hex</a><br>
-            <a href="C:\Users\Administrator\Desktop\Mon Info IYR\Mon HTML CSS JS\Mon 1Siteweb\Calculatrice.html">Mon
+            <a href="Calculatrice.html">Mon
                 Calculatrice</a>
         </div>
     </div>
