--- a/Couleurs Et Code.html
+++ b/Couleurs Et Code.html
@@ -546,9 +546,9 @@
 
 
 
-        <center><a href="C:\Users\Administrator\Desktop\Mon Info IYR\Mon HTML CSS JS\Mon 1Siteweb\Plus De Couleurs.html"
+        <center><a href="Plus De Couleurs.html"
                 class="a1">Plus De Couleurs</a></center><br>
-        <center><a href="C:\Users\Administrator\Desktop\Mon Info IYR\Mon HTML CSS JS\Mon 1Siteweb\Accueil.html"
+        <center><a href="index.html"
                 class="a2">Return</a></center>
     </div>
 
