--- a/Plus De Couleurs.html
+++ b/Plus De Couleurs.html
@@ -1053,7 +1053,7 @@
         <div class="circle Black">Black</div>
 
         <center><a
-                href="C:\Users\Administrator\Desktop\Mon Info IYR\Mon HTML CSS JS\Mon 1Siteweb\Couleurs Et Code.html">Return</a>
+                href="Couleurs Et Code.html">Return</a>
         </center>
     </div>
 
