--- a/Couleurs Et Code.html
+++ b/Couleurs Et Code.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset='utf-8'>
-    <title>All Colors</title>
+    <title>Colors And Code IYR</title>
     <style>
         body {
             background-color: GhostWhite;
@@ -394,22 +394,22 @@
 
 <body>
     <div class="header">
-        <h2><span style="color: MediumBlue;">M</span>on <span style="color: MediumBlue;">A</span>ccueil <span
-                style="color: MediumBlue;">I</span>yr</h2>
-        <div class="menu">
-            <a href="index.html">Mon
-                Accueil</a>
-            <a href="Couleurs Et Code.html">Color
-                Et Code Hex</a><br>
-            <a href="Calculatrice.html">Mon
-                Calculatrice</a>
-        </div>
+        <h2>
+            <h2><span style="color: mediumblue;">IYR</span></h2>
+            <div class="menu">
+                <a href="index.html">Mon
+                    Accueil</a>
+                <a href="Couleurs Et Code.html">Color
+                    Et Code Hex</a><br>
+                <a href="Calculatrice.html">Mon
+                    Calculatrice</a>
+            </div>
     </div>
 
     <div class="heading">
         <div>
-            <center>Toutes les couleurs avec des codes Hex<br><span id="color-display">Cliquez sur le cercle pour voir
-                    le</span></center>
+            <center>Toutes les couleurs avec des codes Hex<br><span id="color-display">Cliquez sur le cercle pour
+                    voir le</span></center>
         </div>
 
     </div>
@@ -546,10 +546,8 @@
 
 
 
-        <center><a href="Plus De Couleurs.html"
-                class="a1">Plus De Couleurs</a></center><br>
-        <center><a href="index.html"
-                class="a2">Return</a></center>
+        <center><a href="Plus De Couleurs.html" class="a1">Plus De Couleurs</a></center><br>
+        <center><a href="index.html" class="a2">Return</a></center>
     </div>
 
 
