--- a/index.html
+++ b/index.html
@@ -171,8 +171,7 @@
 
 <body>
     <div class="header">
-        <h2><span style="color: MediumBlue;">M</span>on <span style="color: MediumBlue;">A</span>ccueil <span
-                style="color: MediumBlue;">I</span>yr</h2>
+        <h2><span style="color: mediumblue;">IYR</span></h2>
         <div class="menu">
             <a href="index.html">Mon
                 Accueil</a>
