--- a/Calculatrice.html
+++ b/Calculatrice.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Accueil IYR</title>
+    <title>Calculator IYR</title>
     <style>
         body {
             background-color: GhostWhite;
@@ -205,16 +205,16 @@
 
 <body>
     <div class="header">
-        <h2><span style="color: MediumBlue;">M</span>on <span style="color: MediumBlue;">A</span>ccueil <span
-                style="color: MediumBlue;">I</span>yr</h2>
-        <div class="menu">
-            <a href="index.html">Mon
-                Accueil</a>
-            <a href="Couleurs Et Code.html">Color
-                Et Code Hex</a><br>
-            <a href="Calculatrice.html">Mon
-                Calculatrice</a>
-        </div>
+        <h2>
+            <h2><span style="color: mediumblue;">IYR</span></h2>
+            <div class="menu">
+                <a href="index.html">Mon
+                    Accueil</a>
+                <a href="Couleurs Et Code.html">Color
+                    Et Code Hex</a><br>
+                <a href="Calculatrice.html">Mon
+                    Calculatrice</a>
+            </div>
     </div>
 
 
