--- a/Plus De Couleurs.html
+++ b/Plus De Couleurs.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Color Circles</title>
+    <title>More Colors IYR</title>
     <style>
         body {
             background-color: GhostWhite;
@@ -857,16 +857,16 @@
 
 <body>
     <div class="header">
-        <h2><span style="color: MediumBlue;">M</span>on <span style="color: MediumBlue;">A</span>ccueil <span
-                style="color: MediumBlue;">I</span>yr</h2>
-        <div class="menu">
-            <a href="index.html">Mon
-                Accueil</a>
-            <a href="Couleurs Et Code.html">Color
-                Et Code Hex</a><br>
-            <a href="Calculatrice.html">Mon
-                Calculatrice</a>
-        </div>
+        <h2>
+            <h2><span style="color: mediumblue;">IYR</span></h2>
+            <div class="menu">
+                <a href="index.html">Mon
+                    Accueil</a>
+                <a href="Couleurs Et Code.html">Color
+                    Et Code Hex</a><br>
+                <a href="Calculatrice.html">Mon
+                    Calculatrice</a>
+            </div>
     </div>
 
     <div class="all-circle">
@@ -1052,8 +1052,7 @@
         <div class="circle DarkSlateGray">DarkSlateGray</div>
         <div class="circle Black">Black</div>
 
-        <center><a
-                href="Couleurs Et Code.html">Return</a>
+        <center><a href="Couleurs Et Code.html">Return</a>
         </center>
     </div>
 
