--- a/Calculatrice.html
+++ b/Calculatrice.html
@@ -224,7 +224,7 @@
         <div>
             <input type="button" value="Ac" onclick="clearDisplay()">
             <input type="button" value="%" onclick="appendToDisplay('%')">
-            <input type="button" value="Sup" onclick="backspace()">
+            <input type="button" value="Del" onclick="backspace()">
             <input type="button" value="/" onclick="appendToDisplay('/')">
         </div>
         <div>
