--- a/Calculatrice.html
+++ b/Calculatrice.html
@@ -252,6 +252,9 @@
             <input type="button" value="=" onclick="calculate()">
         </div>
     </div>
+    
+    <center><a href="index.html">Back</a>
+    </center>
 
 </body>
 
