--- a/Couleurs Et Code.html
+++ b/Couleurs Et Code.html
@@ -408,8 +408,8 @@
 
     <div class="heading">
         <div>
-            <center>Toutes les couleurs avec des codes Hex<br><span id="color-display">Cliquez sur le cercle pour
-                    voir le</span></center>
+            <center>All Colors With Hex Codes<br><span id="color-display">Click on the circle to
+                to see the</span></center>
         </div>
 
     </div>
@@ -535,7 +535,7 @@
 
         <div class="color-picker">
             <input class="color-box" type="color" style="background-color: silver;">
-            <input class="color-name" type="text" placeholder="Nom De Couleur: ">
+            <input class="color-name" type="text" placeholder="color name: ">
             <button onclick="addColorClick()">Add</button>
             <button onclick="clearColors()">Clear</button>
         </div>
@@ -546,8 +546,8 @@
 
 
 
-        <center><a href="Plus De Couleurs.html" class="a1">Plus De Couleurs</a></center><br>
-        <center><a href="index.html" class="a2">Return</a></center>
+        <center><a href="Plus De Couleurs.html" class="a1">more colors</a></center><br>
+        <center><a href="index.html" class="a2">Back</a></center>
     </div>
 
 
