--- a/Plus De Couleurs.html
+++ b/Plus De Couleurs.html
@@ -1052,7 +1052,7 @@
         <div class="circle DarkSlateGray">DarkSlateGray</div>
         <div class="circle Black">Black</div>
 
-        <center><a href="Couleurs Et Code.html">Return</a>
+        <center><a href="Couleurs Et Code.html">Back</a>
         </center>
     </div>
 
