--- a/Couleurs Et Code.html
+++ b/Couleurs Et Code.html
@@ -575,7 +575,7 @@
         const colorName = circle.querySelector('h1').textContent.trim();
 
         const colorDisplay = document.getElementById('color-display');
-        colorDisplay.textContent = `Vous avez cliqué sur ${colorName}: Rgb(${r}, ${g}, ${b}) Hex: ${hexColor}`;
+        colorDisplay.textContent = `You Clicked ${colorName}: Rgb(${r}, ${g}, ${b}) Hex: ${hexColor}`;
     }
 
     function rgbToHex(r, g, b) {
