--- a/Calculatrice.html
+++ b/Calculatrice.html
@@ -65,9 +65,7 @@
         }
 
         .calculatrice {
-            position: absolute;
-            bottom: 65px;
-            left: 490px;
+            margin-top: 40px;
             padding: 20px;
             border-radius: 15px;
             background-color: silver;
@@ -114,6 +112,23 @@
             color: rgba(45, 150, 45);
         }
 
+        .a {
+            position: relative;
+            top: 45px;
+            font-size: 18px;
+            font-weight: bold;
+            color: black;
+            text-decoration: none;
+            padding: 7px;
+            transition: 0.2s;
+        }
+
+        .a:hover {
+            box-shadow: 0 0 3px black;
+            border-radius: 5px;
+            color: rgb(0, 10, 200);
+            text-decoration: underline;
+        }
 
 
 
@@ -217,43 +232,44 @@
             </div>
     </div>
 
+    <center>
+        <div class="calculatrice">
+            <input type="text" id="display" name="display" readonly>
+            <div>
+                <input type="button" value="Ac" onclick="clearDisplay()">
+                <input type="button" value="%" onclick="appendToDisplay('%')">
+                <input type="button" value="Del" onclick="backspace()">
+                <input type="button" value="/" onclick="appendToDisplay('/')">
+            </div>
+            <div>
+                <input type="button" value="7" onclick="appendToDisplay('7')">
+                <input type="button" value="8" onclick="appendToDisplay('8')">
+                <input type="button" value="9" onclick="appendToDisplay('9')">
+                <input type="button" value="*" onclick="appendToDisplay('*')">
+            </div>
+            <div>
+                <input type="button" value="4" onclick="appendToDisplay('4')">
+                <input type="button" value="5" onclick="appendToDisplay('5')">
+                <input type="button" value="6" onclick="appendToDisplay('6')">
+                <input type="button" value="-" onclick="appendToDisplay('-')">
+            </div>
+            <div>
+                <input type="button" value="1" onclick="appendToDisplay('1')">
+                <input type="button" value="2" onclick="appendToDisplay('2')">
+                <input type="button" value="3" onclick="appendToDisplay('3')">
+                <input type="button" value="+" onclick="appendToDisplay('+')">
+            </div>
+            <div>
+                <input type="button" value="00" onclick="appendToDisplay('00')">
+                <input type="button" value="0" onclick="appendToDisplay('0')">
+                <input type="button" value="." onclick="appendToDisplay('.')">
+                <input type="button" value="=" onclick="calculate()">
+            </div>
+        </div>
+    </center>
 
-
-    <div class="calculatrice">
-        <input type="text" id="display" name="display" readonly>
-        <div>
-            <input type="button" value="Ac" onclick="clearDisplay()">
-            <input type="button" value="%" onclick="appendToDisplay('%')">
-            <input type="button" value="Del" onclick="backspace()">
-            <input type="button" value="/" onclick="appendToDisplay('/')">
-        </div>
-        <div>
-            <input type="button" value="7" onclick="appendToDisplay('7')">
-            <input type="button" value="8" onclick="appendToDisplay('8')">
-            <input type="button" value="9" onclick="appendToDisplay('9')">
-            <input type="button" value="*" onclick="appendToDisplay('*')">
-        </div>
-        <div>
-            <input type="button" value="4" onclick="appendToDisplay('4')">
-            <input type="button" value="5" onclick="appendToDisplay('5')">
-            <input type="button" value="6" onclick="appendToDisplay('6')">
-            <input type="button" value="-" onclick="appendToDisplay('-')">
-        </div>
-        <div>
-            <input type="button" value="1" onclick="appendToDisplay('1')">
-            <input type="button" value="2" onclick="appendToDisplay('2')">
-            <input type="button" value="3" onclick="appendToDisplay('3')">
-            <input type="button" value="+" onclick="appendToDisplay('+')">
-        </div>
-        <div>
-            <input type="button" value="00" onclick="appendToDisplay('00')">
-            <input type="button" value="0" onclick="appendToDisplay('0')">
-            <input type="button" value="." onclick="appendToDisplay('.')">
-            <input type="button" value="=" onclick="calculate()">
-        </div>
-    </div>
-    
-    <center><a href="index.html">Back</a>
+    <center>
+        <a href="index.html">Back</a>
     </center>
 
 </body>
