--- a/Calculatrice.html
+++ b/Calculatrice.html
@@ -269,7 +269,7 @@
     </center>
 
     <center>
-        <a href="index.html">Back</a>
+        <a href="index.html" class="a">Back</a>
     </center>
 
 </body>
