--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
     </div>
 
     <div class="main-content">
-        <h1>Merci d'avoir visité le site web rapidement</h1>
+        <h1>Thank you for visiting the website quickly</h1>
     </div>
 </body>
 
