--- a/Calculatrice.html
+++ b/Calculatrice.html
@@ -132,6 +132,7 @@
 
 
 
+
         @media screen and (max-width:600px) {
             body {
                 background-color: GhostWhite;
@@ -141,44 +142,43 @@
 
             .header {
                 background-color: rgba(45, 150, 45);
-                padding: 4px;
+                padding: 10px;
                 display: flex;
                 align-items: center;
                 transition: 0.2s;
                 box-shadow: 0 0 1px rgba(45, 150, 45);
                 position: relative;
-                height: 50px;
+                height: 55px;
             }
 
             .header h2 {
-                font-size: 18px;
+                font-size: 22px;
                 font-weight: bold;
                 color: black;
                 margin: 0;
-                padding: 4px;
+                padding: 0;
                 position: relative;
-                left: 5px;
+                left: 15px;
                 transition: 0.2s;
             }
 
             .header h2:hover {
-                color: rgb(0, 20, 200);
+                color: mediumblue;
             }
 
             .header .menu {
                 display: flex;
-                margin-left: 20px;
+                margin-left: 18px;
                 position: absolute;
-                left: 42%;
-
+                left: 32%;
             }
 
             .header a {
-                font-size: 14px;
+                font-size: 18px;
                 font-weight: bold;
                 color: white;
                 text-decoration: none;
-                padding: 4px;
+                padding: 0;
                 margin-right: 15px;
                 position: static;
                 left: 200px;
@@ -187,29 +187,77 @@
 
             .header a:hover {
                 box-shadow: 0 0 3px black;
-                border-radius: 10px;
-                color: rgb(0, 20, 200);
+                border-radius: 5px;
+                color: rgb(0, 10, 200);
                 text-decoration: underline;
             }
 
-            .main-content {
-                text-align: center;
+            .calculatrice {
                 margin-top: 20px;
-                border-radius: 10px;
-                box-shadow: 0 0 1px silver;
-                position: absolute;
-                left: 50%;
-                transform: translateX(-50%);
-                width: 80%;
                 padding: 20px;
+                border-radius: 15px;
                 background-color: silver;
+                box-shadow: 0 0 1px silver;
+                display: grid;
+                width: 300px;
+                height: 400px;
+                justify-items: center;
+                align-items: center;
             }
 
-            .main-content h1 {
-                font-size: 20px;
-                color: black;
-                margin: 0;
+            .calculatrice input[type="text"] {
+                width: 100%;
+                height: 35px;
+                font-size: 22px;
+                border: none;
+                border-radius: 10px;
+                background-color: ghostwhite;
+                box-shadow: 0 0 1px ghostwhite;
+                cursor: pointer;
+                margin-bottom: 10px;
+                padding-left: 2px;
             }
+
+            .calculatrice input[type="text"]:hover {
+                box-shadow: 0 0 3px black;
+            }
+
+            .calculatrice input[type="button"] {
+                border-radius: 5px;
+                background-color: GhostWhite;
+                box-shadow: 0 0 1px GhostWhite;
+                border: 0;
+                margin: 5px;
+                padding: 7px;
+                transition: 0.2s;
+                width: 60px;
+                height: 45px;
+                font-size: 20px;
+            }
+
+            .calculatrice input[type="button"]:hover {
+                box-shadow: 0 0 3px black;
+                color: rgba(45, 150, 45);
+            }
+
+            .a {
+                position: relative;
+                top: 45px;
+                font-size: 20px;
+                font-weight: bold;
+                color: black;
+                text-decoration: none;
+                padding: 0;
+                transition: 0.2s;
+            }
+
+            .a:hover {
+                box-shadow: 0 0 3px black;
+                border-radius: 5px;
+                color: rgb(0, 10, 200);
+                text-decoration: underline;
+            }
+
 
         }
     </style>
