--- a/Couleurs Et Code.html
+++ b/Couleurs Et Code.html
@@ -19,15 +19,15 @@
             transition: 0.2s;
             box-shadow: 0 0 1px rgba(45, 150, 45);
             position: relative;
-            height: 55px;
+            height: 60px;
         }
 
         .header h2 {
-            font-size: 22px;
+            font-size: 20px;
             font-weight: bold;
             color: black;
             margin: 0;
-            padding: 5px;
+            padding: 0;
             position: relative;
             left: 15px;
             transition: 0.2s;
@@ -41,7 +41,7 @@
             display: flex;
             margin-left: 18px;
             position: absolute;
-            left: 42%;
+            left: 22%;
         }
 
         .header a {
@@ -49,7 +49,7 @@
             font-weight: bold;
             color: white;
             text-decoration: none;
-            padding: 5px;
+            padding: 0;
             margin-right: 15px;
             position: static;
             left: 200px;
