--- a/index.html
+++ b/index.html
@@ -95,44 +95,43 @@
 
             .header {
                 background-color: rgba(45, 150, 45);
-                padding: 4px;
+                padding: 10px;
                 display: flex;
                 align-items: center;
                 transition: 0.2s;
                 box-shadow: 0 0 1px rgba(45, 150, 45);
                 position: relative;
-                height: 50px;
+                height: 60px;
             }
 
             .header h2 {
-                font-size: 18px;
+                font-size: 20px;
                 font-weight: bold;
                 color: black;
                 margin: 0;
-                padding: 4px;
+                padding: 0;
                 position: relative;
-                left: 5px;
+                left: 15px;
                 transition: 0.2s;
             }
 
             .header h2:hover {
-                color: rgb(0, 20, 200);
+                color: mediumblue;
             }
 
             .header .menu {
                 display: flex;
-                margin-left: 20px;
+                margin-left: 18px;
                 position: absolute;
-                left: 42%;
-
+                left: 22%;
             }
 
             .header a {
-                font-size: 14px;
+                font-size: 18px;
                 font-weight: bold;
                 color: white;
                 text-decoration: none;
-                padding: 4px;
+                padding: 0;
                 margin-right: 15px;
                 position: static;
                 left: 200px;
@@ -141,8 +140,8 @@
 
             .header a:hover {
                 box-shadow: 0 0 3px black;
-                border-radius: 10px;
-                color: rgb(0, 20, 200);
+                border-radius: 5px;
+                color: rgb(0, 10, 200);
                 text-decoration: underline;
             }
 
