--- a/Plus De Couleurs.html
+++ b/Plus De Couleurs.html
@@ -32,6 +32,7 @@
             position: relative;
             left: 15px;
             transition: 0.2s;
+            cursor: pointer;
         }
 
         .header h2:hover {
@@ -144,6 +145,7 @@
                 position: relative;
                 left: 15px;
                 transition: 0.2s;
+                cursor: pointer;
             }
 
             .header h2:hover {
