--- a/Couleurs Et Code.html
+++ b/Couleurs Et Code.html
@@ -31,6 +31,7 @@
             position: relative;
             left: 15px;
             transition: 0.2s;
+            cursor: pointer;
         }
 
         .header h2:hover {
@@ -307,6 +308,7 @@
                 position: relative;
                 left: 15px;
                 transition: 0.2s;
+                cursor: pointer;
             }
 
             .header h2:hover {
