--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             position: relative;
             left: 15px;
             transition: 0.2s;
+            cursor: pointer;
         }
 
         .header h2:hover {
@@ -113,6 +114,7 @@
                 position: relative;
                 left: 15px;
                 transition: 0.2s;
+                cursor: pointer;
             }
 
             .header h2:hover {
