--- a/Plus De Couleurs.html
+++ b/Plus De Couleurs.html
@@ -196,6 +196,22 @@
                 color: black;
                 margin: 0;
             }
+
+            a {
+                font-size: 20px;
+                font-weight: bold;
+                color: black;
+                text-decoration: none;
+                padding: 2px;
+                transition: 0.2s;
+            }
+
+            a:hover {
+                box-shadow: 0 0 3px black;
+                border-radius: 5px;
+                color: rgb(0, 20, 200);
+                text-decoration: underline;
+            }
         }
 
         /* Red Colors */
