--- a/Couleurs Et Code.html
+++ b/Couleurs Et Code.html
@@ -27,7 +27,7 @@
             font-weight: bold;
             color: black;
             margin: 0;
-            padding: 5px;
+            padding: 3px;
             position: relative;
             left: 15px;
             transition: 0.2s;
@@ -50,7 +50,7 @@
             font-weight: bold;
             color: white;
             text-decoration: none;
-            padding: 5px;
+            padding: 3px;
             margin-right: 15px;
             position: static;
             left: 200px;
@@ -66,11 +66,13 @@
 
         .a1,
         .a2 {
+            position: relative;
+            top: 15px;
             font-size: 18px;
             font-weight: bold;
             color: black;
             text-decoration: none;
-            padding: 7px;
+            padding: 3px;
             transition: 0.2s;
         }
 
@@ -102,7 +104,7 @@
             border-radius: 5px;
             border: 2px double black;
             background-color: LightGray;
-            padding: 8px;
+            padding: 7px;
             box-shadow: 0 0 1px LightGray;
         }
 
@@ -129,14 +131,14 @@
             background-color: lightgray;
             box-shadow: 0 0 1px lightgray;
             border-radius: 10px;
-            margin: 4px;
+            margin: 2px;
         }
 
         .color-circle {
             width: 75px;
             height: 75px;
             border-radius: 50%;
-            margin: 20px 20px 0 20px;
+            margin: 22px 22px 0 22px;
             transition: 0.2s;
         }
 
@@ -156,7 +158,7 @@
             color: #000000;
             margin-top: 10px;
             border-radius: 5px;
-            padding: 2px;
+            padding: 3px;
         }
 
         .color-circle-name h1:hover {
@@ -177,14 +179,12 @@
 
 
 
-
         .color-picker {
             display: flex;
             justify-content: center;
             align-items: center;
             margin-bottom: 20px;
             padding: 10px;
-
         }
 
         .color-picker input {
@@ -194,7 +194,7 @@
             border-radius: 5px;
             background-color: GhostWhite;
             box-shadow: 0 0 1px ghostwhite;
-            padding: 0;
+            padding: 3px;
             border: silver;
 
         }
@@ -241,6 +241,7 @@
             width: 80px;
             height: 80px;
             border: 0;
+            padding: 45px;
             border-radius: 100%;
             overflow: hidden;
         }
