Update Plus De Couleurs.html

--- a/Plus De Couleurs.html
+++ b/Plus De Couleurs.html
@@ -90,7 +90,7 @@
         .all-circle {
             margin: 20px auto;
             width: 85%;
-            padding: 25px;
+            padding: 20px;
             border-radius: 15px;
             background-color: silver;
             box-shadow: 0 0 1px silver;
@@ -115,7 +115,6 @@
         .circle:hover {
             transform: scale(1.1);
             box-shadow: 0 0 3px black;
-
         }
 
 
@@ -214,6 +213,36 @@
                 border-radius: 5px;
                 color: rgb(0, 20, 200);
                 text-decoration: underline;
+            }
+
+            .all-circle {
+                margin: 20px auto;
+                width: 85%;
+                padding: 20px;
+                border-radius: 15px;
+                background-color: silver;
+                box-shadow: 0 0 1px silver;
+            }
+
+            .circle {
+                width: 100px;
+                height: 100px;
+                display: inline-block;
+                border-radius: 50%;
+                margin: 12px;
+                line-height: 100px;
+                color: white;
+                text-align: center;
+                font-weight: bolder;
+                transition: 0.2s;
+                background-color: lightgray;
+                box-shadow: 0 0 1px lightgray;
+            }
+
+
+            .circle:hover {
+                transform: scale(1.1);
+                box-shadow: 0 0 3px black;
             }
         }
 
@@ -880,11 +909,12 @@
         <h2>
             <h2><span style="color: mediumblue;">IYR</span></h2>
             <div class="menu">
-                <a href="index.html">Mon
+                <a href="C:\Users\Administrator\Desktop\Mon Info IYR\Mon HTML CSS JS\Mon 1Siteweb\Accueil.html">Mon
                     Accueil</a>
-                <a href="Couleurs Et Code.html">Color
+                <a
+                    href="C:\Users\Administrator\Desktop\Mon Info IYR\Mon HTML CSS JS\Mon 1Siteweb\Couleurs Et Code.html">Color
                     Et Code Hex</a><br>
-                <a href="Calculatrice.html">Mon
+                <a href="C:\Users\Administrator\Desktop\Mon Info IYR\Mon HTML CSS JS\Mon 1Siteweb\Calculatrice.html">Mon
                     Calculatrice</a>
             </div>
     </div>
@@ -1072,7 +1102,8 @@
         <div class="circle DarkSlateGray">DarkSlateGray</div>
         <div class="circle Black">Black</div>
 
-        <center><a href="Couleurs Et Code.html">Back</a>
+        <center><a
+                href="C:\Users\Administrator\Desktop\Mon Info IYR\Mon HTML CSS JS\Mon 1Siteweb\Couleurs Et Code.html">Back</a>
         </center>
     </div>
 
