--- a/Calculatrice.html
+++ b/Calculatrice.html
@@ -260,6 +260,136 @@
                 text-decoration: underline;
             }
         }
+
+
+
+
+        @media screen and (max-width:400) {
+            body {
+                background-color: GhostWhite;
+                margin: 0;
+                font-family: Arial, Helvetica, sans-serif;
+            }
+
+            .header {
+                background-color: rgba(45, 150, 45);
+                padding: 10px;
+                display: flex;
+                align-items: center;
+                transition: 0.2s;
+                box-shadow: 0 0 1px rgba(45, 150, 45);
+                position: relative;
+                height: 60px;
+            }
+
+            .header h2 {
+                font-size: 18px;
+                font-weight: bold;
+                color: black;
+                margin: 0;
+                padding: 0;
+                position: relative;
+                left: 15px;
+                transition: 0.2s;
+                cursor: pointer;
+            }
+
+            .header h2:hover {
+                color: mediumblue;
+            }
+
+            .header .menu {
+                display: flex;
+                margin-left: 18px;
+                position: absolute;
+                left: 22%;
+            }
+
+            .header a {
+                font-size: 16px;
+                font-weight: bold;
+                color: white;
+                text-decoration: none;
+                padding: 0;
+                margin-right: 15px;
+                position: static;
+                left: 200px;
+                transition: 0.2s;
+            }
+
+            .header a:hover {
+                box-shadow: 0 0 3px black;
+                border-radius: 5px;
+                color: rgb(0, 10, 200);
+                text-decoration: underline;
+            }
+
+            .calculatrice {
+                margin-top: 20px;
+                padding: 20px;
+                border-radius: 15px;
+                background-color: silver;
+                box-shadow: 0 0 1px silver;
+                display: grid;
+                width: 200px;
+                height: 350px;
+                justify-items: center;
+                align-items: center;
+            }
+
+            .calculatrice input[type="text"] {
+                width: 100%;
+                height: 35px;
+                font-size: 20px;
+                border: none;
+                border-radius: 10px;
+                background-color: ghostwhite;
+                box-shadow: 0 0 1px ghostwhite;
+                cursor: pointer;
+                margin-bottom: 10px;
+                padding-left: 2px;
+            }
+
+            .calculatrice input[type="text"]:hover {
+                box-shadow: 0 0 3px black;
+            }
+
+            .calculatrice input[type="button"] {
+                border-radius: 5px;
+                background-color: GhostWhite;
+                box-shadow: 0 0 1px GhostWhite;
+                border: 0;
+                margin: 5px;
+                padding: 7px;
+                transition: 0.2s;
+                width: 60px;
+                height: 45px;
+                font-size: 18px;
+            }
+
+            .calculatrice input[type="button"]:hover {
+                box-shadow: 0 0 3px black;
+                color: rgba(45, 150, 45);
+            }
+
+            .a {
+                position: relative;
+                top: 45px;
+                font-size: 18px;
+                font-weight: bold;
+                color: black;
+                text-decoration: none;
+                padding: 0;
+                transition: 0.2s;
+            }
+
+            .a:hover {
+                box-shadow: 0 0 3px black;
+                border-radius: 5px;
+                color: rgb(0, 10, 200);
+                text-decoration: underline;
+            }
+        }
     </style>
 </head>
 
@@ -268,11 +398,11 @@
         <h2>
             <h2><span style="color: mediumblue;">IYR</span></h2>
             <div class="menu">
-                <a href="index.html">Mon
+                <a href="C:\Users\Administrator\Desktop\Mon Info IYR\Mon HTML CSS JS\Mon 1Siteweb\Accueil.html">Mon
                     Accueil</a>
-                <a href="Couleurs Et Code.html">Color
+                <a href="C:\Users\Administrator\Desktop\Mon Info IYR\Mon HTML CSS JS\Mon 1Siteweb\Couleurs Et Code.html">Color
                     Et Code Hex</a><br>
-                <a href="Calculatrice.html">Mon
+                <a href="C:\Users\Administrator\Desktop\Mon Info IYR\Mon HTML CSS JS\Mon 1Siteweb\Calculatrice.html">Mon
                     Calculatrice</a>
             </div>
     </div>
@@ -314,7 +444,7 @@
     </center>
 
     <center>
-        <a href="index.html" class="a">Back</a>
+        <a href="C:\Users\Administrator\Desktop\Mon Info IYR\Mon HTML CSS JS\Mon 1Siteweb\Accueil.html" class="a">Back</a>
     </center>
 
 </body>
