--- a/Plus De Couleurs.html
+++ b/Plus De Couleurs.html
@@ -18,8 +18,7 @@
             display: flex;
             align-items: center;
             transition: 0.2s;
-            box-shadow: 0 0 1px rgba(45, 150, 45);
-            position: relative;
+            box-shadow: 0 0 5px rgba(45, 150, 45);
             height: 55px;
         }
 
@@ -27,23 +26,12 @@
             font-size: 22px;
             font-weight: bold;
             color: black;
-            margin: 0;
-            padding: 3px;
-            position: relative;
-            left: 15px;
-            transition: 0.2s;
             cursor: pointer;
-        }
-
-        .header h2:hover {
-            color: mediumblue;
         }
 
         .header .menu {
             display: flex;
-            margin-left: 18px;
-            position: absolute;
-            left: 42%;
+            margin-left: auto;
         }
 
         .header a {
@@ -53,17 +41,16 @@
             text-decoration: none;
             padding: 3px;
             margin-right: 15px;
-            position: static;
-            left: 200px;
             transition: 0.2s;
         }
 
         .header a:hover {
-            box-shadow: 0 0 3px black;
+            box-shadow: 0 0 3px rgba(0, 0, 0);
             border-radius: 5px;
             color: rgb(0, 10, 200);
             text-decoration: underline;
         }
+
 
 
         hr {
@@ -121,63 +108,16 @@
 
 
         @media screen and (max-width:600px) {
-            body {
-                background-color: GhostWhite;
-                margin: 0;
-                font-family: Arial, Helvetica, sans-serif;
-            }
-
             .header {
-                background-color: rgba(45, 150, 45);
-                padding: 10px;
-                display: flex;
-                align-items: center;
-                transition: 0.2s;
-                box-shadow: 0 0 1px rgba(45, 150, 45);
-                position: relative;
                 height: 60px;
             }
 
             .header h2 {
                 font-size: 20px;
-                font-weight: bold;
-                color: black;
-                margin: 0;
-                padding: 0;
-                position: relative;
-                left: 15px;
-                transition: 0.2s;
-                cursor: pointer;
-            }
-
-            .header h2:hover {
-                color: mediumblue;
-            }
-
-            .header .menu {
-                display: flex;
-                margin-left: 18px;
-                position: absolute;
-                left: 22%;
             }
 
             .header a {
-                font-size: 18px;
-                font-weight: bold;
-                color: white;
-                text-decoration: none;
-                padding: 0;
-                margin-right: 15px;
-                position: static;
-                left: 200px;
-                transition: 0.2s;
-            }
-
-            .header a:hover {
-                box-shadow: 0 0 3px black;
-                border-radius: 5px;
-                color: rgb(0, 10, 200);
-                text-decoration: underline;
+                font-size: 15px;
             }
 
             .main-content {
@@ -909,12 +849,11 @@
         <h2>
             <h2><span style="color: mediumblue;">IYR</span></h2>
             <div class="menu">
-                <a href="C:\Users\Administrator\Desktop\Mon Info IYR\Mon HTML CSS JS\Mon 1Siteweb\Accueil.html">Mon
+                <a href="index.html">Mon
                     Accueil</a>
-                <a
-                    href="C:\Users\Administrator\Desktop\Mon Info IYR\Mon HTML CSS JS\Mon 1Siteweb\Couleurs Et Code.html">Color
+                <a href="Couleurs Et Code.html">Color
                     Et Code Hex</a><br>
-                <a href="C:\Users\Administrator\Desktop\Mon Info IYR\Mon HTML CSS JS\Mon 1Siteweb\Calculatrice.html">Mon
+                <a href="Calculatrice.html">Mon
                     Calculatrice</a>
             </div>
     </div>
@@ -1102,8 +1041,7 @@
         <div class="circle DarkSlateGray">DarkSlateGray</div>
         <div class="circle Black">Black</div>
 
-        <center><a
-                href="C:\Users\Administrator\Desktop\Mon Info IYR\Mon HTML CSS JS\Mon 1Siteweb\Couleurs Et Code.html">Back</a>
+        <center><a href="Couleurs Et Code.html">Back</a>
         </center>
     </div>
 
