--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
             </div>
             <div class="app-info" onclick="window.location.href='https://androidprog.com/download/snapseed/';">
                 <div class="app-icon">
-                    <img src="C:\Users\Administrator\Documents\GitHub\Web-Apk-Color-Calculator\Img\Snapseed.png"
+                    <img src="Snapseed.png"
                         alt="Logo1" width="100px" height="100px">
                 </div>
                 <div class="app-name">
