--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
             <div class="app-info"
                 onclick="window.location.href='https://statics.liteapks.com/Remini/Remini%20v3.7.673.202399888%20%28Mod1%29.apk';">
                 <div class="app-icon">
-                    <img src="C:\Users\Administrator\Documents\GitHub\Web-Apk-Color-Calculator\Img\Remini.png"
+                    <img src="Remini.png"
                         alt="Logo1" width="100px" height="100px">
                 </div>
                 <div class="app-name">
@@ -205,7 +205,7 @@
             <div class="app-info"
                 onclick="window.location.href='https://statics.liteapks.com/Picsart%20Photo%20Editor/Picsart%20v25.2.3%20%28PREMIUM%29.apk';">
                 <div class="app-icon">
-                    <img src="C:\Users\Administrator\Documents\GitHub\Web-Apk-Color-Calculator\Img\Picsart.png"
+                    <img src="Picsart.png"
                         alt="Logo1" width="100px" height="100px">
                 </div>
                 <div class="app-name">
@@ -215,7 +215,7 @@
             <div class="app-info"
                 onclick="window.location.href='https://cloud.liteapks.com/download/Adobe%20Lightroom/Lightroom%20v9.3.1%20(PREMIUM).apk';">
                 <div class="app-icon">
-                    <img src="C:\Users\Administrator\Documents\GitHub\Web-Apk-Color-Calculator\Img\Adobe Lightroom.png"
+                    <img src="Adobe Lightroom.png"
                         alt="Logo1" width="100px" height="100px">
                 </div>
                 <div class="app-name">
@@ -225,7 +225,7 @@
             <div class="app-info"
                 onclick="window.location.href='https://cloud.liteapks.com/download/CapCut/v12.1.0/CapCut%20v12.1.0%20(Pro).apk';">
                 <div class="app-icon">
-                    <img src="C:\Users\Administrator\Documents\GitHub\Web-Apk-Color-Calculator\Img\Capcut.png"
+                    <img src="Capcut.png"
                         alt="Logo1" width="100px" height="100px">
                 </div>
                 <div class="app-name">
