--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
             <div class="app-info"
                 onclick="window.location.href='https://statics.liteapks.com/CapCut/v12.2.0/CapCut%20v12.2.0%20%28Pro%29.apk';">
                 <div class="app-icon">
-                    <img src="C:\Users\Administrator\Desktop\Mon Info IYR\Mon HTML CSS JS\Mon 1Siteweb\Img\Capcut.png"
+                    <img src="Capcut.png"
                         alt="Logo4" width="100px" height="100px">
                 </div>
                 <div class="app-name">
@@ -235,7 +235,7 @@
             <div class="app-info"
                 onclick="window.location.href='https://play.liteapks.com/Snapseed/Snapseed-2.22.0.633363672.apk';">
                 <div class="app-icon">
-                    <img src="C:\Users\Administrator\Desktop\Mon Info IYR\Mon HTML CSS JS\Mon 1Siteweb\Img\Snapseed.png"
+                    <img src="Snapseed.png"
                         alt="Logo5" width="100px" height="100px">
                 </div>
                 <div class="app-name">
@@ -245,7 +245,7 @@
             <div class="app-info"
                 onclick="window.location.href='https://statics.liteapks.com/TrebEdit/TrebEdit%20v3.5.12%20%28PREMIUM%29.apk';">
                 <div class="app-icon">
-                    <img src="C:\Users\Administrator\Desktop\Mon Info IYR\Mon HTML CSS JS\Mon 1Siteweb\Img\Trebedit.png"
+                    <img src="Trebedit.png"
                         alt="Logo5" width="100px" height="100px">
                 </div>
                 <div class="app-name">
@@ -255,7 +255,7 @@
             <div class="app-info"
                 onclick="window.location.href='https://cloud.liteapks.com/download/Pydroid%203/Pydroid%203%20%20%20v7.2%20(Premium).apk';">
                 <div class="app-icon">
-                    <img src="C:\Users\Administrator\Desktop\Mon Info IYR\Mon HTML CSS JS\Mon 1Siteweb\Img\Pydroid 3.png"
+                    <img src="Pydroid 3.png"
                         alt="Logo5" width="100px" height="100px">
                 </div>
                 <div class="app-name">
