--- a/index.html
+++ b/index.html
@@ -195,8 +195,7 @@
             <div class="app-info"
                 onclick="window.location.href='https://statics.liteapks.com/Remini/Remini%20v3.7.673.202399888%20%28Mod1%29.apk';">
                 <div class="app-icon">
-                    <img src="Remini.png"
-                        alt="Logo1" width="100px" height="100px">
+                    <img src="Remini.png" alt="Logo1" width="100px" height="100px">
                 </div>
                 <div class="app-name">
                     <h1>Remini</h1>
@@ -248,7 +247,7 @@
                 </div>
             </div>
             <div class="app-info"
-                onclick="window.location.href='https://cloud.liteapks.com/download/Pydroid%203/Pydroid%203%20%20%20v7.2%20(Premium).apk';">
+                onclick="window.location.href='https://dl.apkmodct.com/apps/pydroid-3-1-[apkmodct.com].apk';">
                 <div class="app-icon">
                     <img src="Pydroid 3.png" alt="Logo7" width="100px" height="100px">
                 </div>
