--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
             <div class="app-info"
                 onclick="window.location.href='https://statics.liteapks.com/Adobe%20Lightroom/Lightroom%20v9.4.1%20%28PREMIUM%29%20.apk';">
                 <div class="app-icon">
-                    <img src="Adobe Lightroom.png" alt="Logo3" width="100px" height="100px">
+                    <img src="C:\Users\Administrator\Documents\GitHub\Web-Apk-Color-Calculator\Img\Adobe Lightroom.png" alt="Logo3" width="100px" height="100px">
                 </div>
                 <div class="app-name">
                     <h1>Adobe Lightroom</h1>
