--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
             <div class="app-info"
                 onclick="window.location.href='https://statics.liteapks.com/MT%20Manager/MT2.16.1-clone.apk';">
                 <div class="app-icon">
-                    <img src="D:\Iyed\Info IYR All Years\My Info\Mon HTML CSS JS\Mon 1Siteweb\Img\Mt Manager.png"
+                    <img src="Mt Manager.png"
                         alt="Logo5" width="100px" height="100px">
                 </div>
                 <div class="app-name">
