--- a/index.html
+++ b/index.html
@@ -133,28 +133,35 @@
 
         @media screen and (max-width: 600px) {
             .header {
-                height: 60px;
+                height: 50px;
             }
 
             .header h2 {
-                font-size: 20px;
+                font-size: 15px;
             }
 
             .header a {
                 font-size: 15px;
+                margin-left: 15px;
+                padding: 2px;
             }
 
             .main-content {
-                width: 90%;
+                width: 65%;
+            }
+
+            .main-content h1 {
+                font-size: 16px;
             }
 
             .main-content1 {
-                width: 90%;
+                width: 80%;
                 margin-top: 10px;
+                font-size: 14px;
             }
 
             .span1 {
-                font-size: 16px;
+                font-size: 14px;
             }
 
             .app-row {
