--- a/index.html
+++ b/index.html
@@ -265,8 +265,7 @@
             <div class="app-info"
                 onclick="window.location.href='https://statics.liteapks.com/MT%20Manager/MT2.16.1-clone.apk';">
                 <div class="app-icon">
-                    <img src="Mt Manager.png"
-                        alt="Logo5" width="100px" height="100px">
+                    <img src="Mt Manager.png" alt="Logo5" width="100px" height="100px">
                 </div>
                 <div class="app-name">
                     <h1>Mt Manager</h1>
