--- a/Calculatrice.html
+++ b/Calculatrice.html
@@ -124,15 +124,17 @@
 
         @media screen and (max-width:600px) {
             .header {
-                height: 60px;
+                height: 50px;
             }
 
             .header h2 {
-                font-size: 20px;
+                font-size: 15px;
             }
 
             .header a {
                 font-size: 15px;
+                margin-left: 15px;
+                padding: 2px;
             }
 
             .calculatrice {
