--- a/Calculatrice.html
+++ b/Calculatrice.html
@@ -137,7 +137,11 @@
                 padding: 2px;
             }
 
-
+            .calculatrice {
+                height: 500px;
+                justify-items: center;
+                align-items: center;
+            }
 
         }
     </style>
