--- a/index.html
+++ b/index.html
@@ -167,6 +167,10 @@
             .app-row {
                 margin-top: 10px;
             }
+
+            .app-name h1 {
+                font-size: 18px;
+            }
         }
     </style>
 </head>
