--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
 
         .main-content h1 {
             font-size: 30px;
-            color: black;
             margin: 0;
         }
 
@@ -49,8 +48,8 @@
         }
 
         .app-info {
+            text-align: center;
             background-color: lightgray;
-            display: flex;
             padding: 7px;
             border-radius: 10px;
             align-items: center;
@@ -107,7 +106,7 @@
 
 <body>
     <div class="header">
-        <h2><span style="color: mediumblue;">IYR</span></h2>
+        <h2><span style="color: white;">IYR</span></h2>
         <div class="menu">
             <a href="index.html">Mon
                 Accueil</a>
@@ -119,17 +118,19 @@
     </div>
 
     <div class="main-content">
-        <h1>Thank you for visiting the website quickly</h1>
+        <h1>Welcome to IYR App Downloads</h1>
     </div>
     <div class="main-content1">
-        Downloading modified applications that include free payments may seem attractive, but... Including what these
-        are modified versions of paid subscription content or premium subscriptions without the need to pay, but please
-        note that they work outside official stores and applications and lack secure security. In addition, it is
-        necessary to take care of the experimental safety of the animals considering the sources of everything
-        alternative, and for the safety of the device and intellectual property rights.
+        ⚠️ Important Notice: Downloading modified applications can pose significant security risks. These modified
+        versions may:
+        <ul>
+            <li>Lack official security measures</li>
+            <li>Violate intellectual property rights</li>
+            <li>Potentially harm your device</li>
+        </ul>
         <hr>
         <div>
-            <h2>Download Apps: <br></h2><span class="span1">Clicked in the button below to download the app.</span>
+            <h2>Download Apps<br></h2><span class="span1">Click on an app icon below to download:</span>
         </div>
 
         <div class="app-row">
