--- a/Calculatrice.html
+++ b/Calculatrice.html
@@ -38,8 +38,8 @@
             border-radius: 5px;
             background-color: GhostWhite;
             border: 0;
-            margin: 5px;
-            padding: 7px;
+            margin: 4px;
+            padding: 8px;
             transition: 0.2s;
             width: 60px;
             height: 45px;
@@ -53,20 +53,19 @@
 
         .a {
             position: relative;
-            top: 45px;
+            top: 46px;
             font-size: 18px;
             font-weight: bold;
             color: black;
             text-decoration: none;
-            padding: 3px;
+            padding: 6px;
             transition: 0.2s;
         }
 
         .a:hover {
-            box-shadow: 0 0 3px black;
-            border-radius: 5px;
+            box-shadow: 0 0 2px rgba(0, 0, 0);
+            border-radius: 6px;
             color: rgb(0, 10, 200);
-            text-decoration: underline;
         }
 
 
