--- a/Couleurs Et Code.html
+++ b/Couleurs Et Code.html
@@ -8,22 +8,19 @@
     <style>
         .a1,
         .a2 {
-            position: relative;
-            top: 15px;
-            font-size: 18px;
             font-weight: bold;
             color: black;
             text-decoration: none;
-            padding: 3px;
-            transition: 0.2s;
+            padding: 6px;
+            margin-right: 15px;
+            transition: 0.12s;
         }
 
         .a1:hover,
         .a2:hover {
-            box-shadow: 0 0 3px black;
-            border-radius: 5px;
+            box-shadow: 0 0 2px rgba(0, 0, 0);
+            border-radius: 6px;
             color: rgb(0, 10, 200);
-            text-decoration: underline;
         }
 
         .heading {
@@ -32,7 +29,7 @@
             margin: 20px auto;
             background-color: silver;
             border-radius: 15px;
-            padding: 15px;
+            padding: 14px;
             font-size: 30px;
             font-weight: bold;
             text-transform: capitalize;
@@ -43,7 +40,7 @@
             border-radius: 5px;
             border: 2px double black;
             background-color: LightGray;
-            padding: 7px;
+            padding: 8px;
         }
 
         #color-display:hover {
@@ -54,7 +51,7 @@
         .Allcontent {
             justify-items: center;
             margin: 20px auto;
-            padding: 25px;
+            padding: 26px;
             width: 85%;
             border-radius: 15px;
             background-color: silver;
@@ -68,7 +65,7 @@
         .circle-name {
             background-color: lightgray;
             border-radius: 10px;
-            margin: 0 4px;
+            margin: 4px;
         }
 
         .color-circle {
@@ -95,7 +92,7 @@
             color: #000000;
             margin-top: 10px;
             border-radius: 5px;
-            padding: 3px;
+            padding: 4px;
         }
 
         .color-circle-name h1:hover {
@@ -128,7 +125,7 @@
             height: 30px;
             border-radius: 5px;
             background-color: GhostWhite;
-            padding: 3px;
+            padding: 4px;
             border: silver;
 
         }
@@ -142,7 +139,7 @@
             margin: 5px;
             cursor: pointer;
             font-size: 20px;
-            padding: 7px;
+            padding: 8px;
             border-radius: 5px;
             border: 1px solid lightgray;
             background-color: GhostWhite;
@@ -173,7 +170,7 @@
             width: 80px;
             height: 80px;
             border: 0;
-            padding: 45px;
+            padding: 46px;
             border-radius: 100%;
             overflow: hidden;
         }
@@ -182,7 +179,7 @@
             font-size: 16px;
             text-align: center;
             width: 100px;
-            padding: 7px;
+            padding: 8px;
             margin: 5px;
             border-radius: 5px;
             border: 1px solid LightGray;
@@ -197,7 +194,7 @@
             font-size: 20px;
             display: grid;
             justify-content: center;
-            padding: 7px;
+            padding: 8px;
             border-radius: 5px;
             border: 1px solid LightGray;
             background-color: GhostWhite;
