--- a/Plus De Couleurs.html
+++ b/Plus De Couleurs.html
@@ -11,19 +11,18 @@
         }
 
         a {
-            font-size: 20px;
             font-weight: bold;
             color: black;
             text-decoration: none;
-            padding: 7px;
-            transition: 0.2s;
+            padding: 6px;
+            margin-right: 16px;
+            transition: 0.12s;
         }
 
         a:hover {
-            box-shadow: 0 0 3px black;
-            border-radius: 10px;
-            color: rgb(0, 20, 200);
-            text-decoration: underline;
+            box-shadow: 0 0 2px rgba(0, 0, 0);
+            border-radius: 6px;
+            color: rgb(0, 10, 200);
         }
 
         .all-circle {
