--- a/index.html
+++ b/index.html
@@ -121,13 +121,15 @@
         <h1>Welcome to IYR App Downloads</h1>
     </div>
     <div class="main-content1">
-        ⚠️ Important Notice: Downloading modified applications can pose significant security risks. These modified
-        versions may:
-        <ul>
+        <p style="color: #ff1a1a;">
+            ⚠️ Important Notice: Downloading modified applications can pose significant security risks. These modified
+            versions may:
+        <ul style="color: #ff1a1a;">
             <li>Lack official security measures</li>
             <li>Violate intellectual property rights</li>
             <li>Potentially harm your device</li>
         </ul>
+        </p>
         <hr>
         <div>
             <h2>Download Apps<br></h2><span class="span1">Click on an app icon below to download:</span>
