--- a/Calculatrice.html
+++ b/Calculatrice.html
@@ -83,7 +83,7 @@
 <body>
     <div class="header">
         <h2>
-            <h2><span style="color: mediumblue;">IYR</span></h2>
+            <h2><span style="color: white;">IYR</span></h2>
             <div class="menu">
                 <a href="index.html">Mon
                     Accueil</a>
