--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             margin: 20px auto;
             border-radius: 15px;
             width: 60%;
-            padding: 25px;
+            padding: 20px;
             background-color: silver;
         }
 
@@ -50,28 +50,30 @@
         .app-info {
             text-align: center;
             background-color: lightgray;
-            padding: 7px;
+            padding: 6px;
             border-radius: 10px;
             align-items: center;
             margin: 10px;
             cursor: pointer;
-            transition: box-shadow 0.2s, color 0.2s;
+            transition: 0.2;
         }
 
         .app-info:hover {
-            box-shadow: 0 0 3px rgba(45, 150, 45);
+            box-shadow: 0 0 2px rgba(45, 150, 45);
             color: rgba(45, 150, 45);
         }
 
-        .app-name {
-            margin-left: 10px;
+        .app-icon img {
+            border-radius: 12px;
         }
 
         .app-name h1 {
-            font-size: 22px;
+            font-size: 20px;
             color: black;
-            margin: 7px;
-            padding: 3px;
+        }
+
+        .app-name h1:hover {
+            color: rgba(45, 150, 45);
         }
 
         @media screen and (max-width: 600px) {
@@ -182,7 +184,7 @@
                 </div>
             </div>
             <div class="app-info"
-                onclick="window.location.href='https://statics.liteapks.com/TrebEdit/TrebEdit%20v3.5.12%20%28PREMIUM%29.apk';">
+                onclick="window.location.href='https://drive.usercontent.google.com/download?id=1eRzo6BtlPIHlGL_uYtVV_SD20vlsaUvK&export=download&authuser=0';">
                 <div class="app-icon">
                     <img src="Trebedit.png" alt="Logo6" width="100px" height="100px">
                 </div>
@@ -206,6 +208,15 @@
                 </div>
                 <div class="app-name">
                     <h1>Mt Manager</h1>
+                </div>
+            </div>
+            <div class="app-info"
+                onclick="window.location.href='https://statics.liteapks.com/MT%20Manager/MT2.16.1-clone.apk';">
+                <div class="app-icon">
+                    <img src="GameKey.png" alt="Logo5" width="100px" height="100px">
+                </div>
+                <div class="app-name">
+                    <h1>Game Helper</h1>
                 </div>
             </div>
         </div>
