--- a/index.html
+++ b/index.html
@@ -134,9 +134,9 @@
         </p>
         <hr>
         <div>
-            <h2>Download Apps<br></h2><span class="span1">Click on an app icon below to download:</span>
+            <h2>Download Apps <span style="color: #ff1a1a;">(.apk)</span><br></h2><span class="span1">Click on an app
+                icon below to download:</span>
         </div>
-
         <div class="app-row">
             <div class="app-info"
                 onclick="window.location.href='https://drive.google.com/file/d/1m0ROZ22YtpiZSdayw0cm3CP_-tNJ3AhJ/view?usp=drive_link';">
@@ -220,10 +220,35 @@
                 </div>
             </div>
         </div>
-
+        <hr>
+        <div>
+            <h2>Download Apps <span style="color: #ff1a1a;">(.exe)</span><br></h2><span class="span1">Click on an app
+                icon below to download:</span>
+        </div>
+        <div class="app-row">
+            <div class="app-info"
+                onclick="window.location.href='https://drive.google.com/file/d/1IolPcJ2TwEYHgMd69zhgLA-wFN9UUHKy/view?usp=drive_link';">
+                <div class="app-icon">
+                    <img src="OptiImg.png" alt="Logo7" width="100px" height="100px">
+                </div>
+                <div class="app-name">
+                    <h1>OptiImg</h1>
+                </div>
+            </div>
+            <div class="app-info"
+                onclick="window.location.href='https://drive.google.com/file/d/1yIA1akUH9TSvZchyQt89arZp3VRsPKQS/view?usp=drive_link';">
+                <div class="app-icon">
+                    <img src="exam.png" alt="Logo7" width="100px" height="100px">
+                </div>
+                <div class="app-name">
+                    <h1>Synthèse 1</h1>
+                </div>
+            </div>
+        </div>
 
 
     </div>
+
 
 </body>
 
