--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
             <div class="app-info"
                 onclick="window.location.href='https://drive.google.com/file/d/13SfUc87FN8PUPnJa2PUwjHOKmVikxwga/view?usp=drive_link';">
                 <div class="app-icon">
-                    <img src="Mt Manager.png" alt="Logo5" width="100px" height="100px">
+                    <img src="Mt Manager.png" alt="Logo8" width="100px" height="100px">
                 </div>
                 <div class="app-name">
                     <h1>Mt Manager</h1>
@@ -183,7 +183,7 @@
             <div class="app-info"
                 onclick="window.location.href='https://drive.google.com/file/d/1v60dOXRGyIAziBHmqzxPAh0Rj4SRsR7k/view?usp=drive_link';">
                 <div class="app-icon">
-                    <img src="GameKey.png" alt="Logo5" width="100px" height="100px">
+                    <img src="GameKey.png" alt="Logo9" width="100px" height="100px">
                 </div>
                 <div class="app-name">
                     <h1>Game Helper</h1>
@@ -197,18 +197,18 @@
         </div>
         <div class="app-row">
             <div class="app-info"
-                onclick="window.location.href='https://drive.google.com/file/d/1IolPcJ2TwEYHgMd69zhgLA-wFN9UUHKy/view?usp=drive_link';">
+                onclick="window.location.href='https://drive.google.com/file/d/1rEoZDO_1xDjsLxqCWlHAiJwUpBmy9KMx/view?usp=drive_link';">
                 <div class="app-icon">
-                    <img src="OptiImg.png" alt="Logo7" width="100px" height="100px">
+                    <img src="EnhancedIMG.png" alt="LogoIYR1" width="100px" height="100px">
                 </div>
                 <div class="app-name">
-                    <h1>OptiImg</h1>
+                    <h1>EnhancedIMG</h1>
                 </div>
             </div>
             <div class="app-info"
                 onclick="window.location.href='https://drive.google.com/file/d/1yIA1akUH9TSvZchyQt89arZp3VRsPKQS/view?usp=drive_link';">
                 <div class="app-icon">
-                    <img src="exam.png" alt="Logo7" width="100px" height="100px">
+                    <img src="exam.png" alt="LogoIYR2" width="100px" height="100px">
                 </div>
                 <div class="app-name">
                     <h1>Synthèse 1</h1>
