Improved Speed Light

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <div class="app-info"
                 onclick="window.location.href='https://drive.google.com/file/d/1m0ROZ22YtpiZSdayw0cm3CP_-tNJ3AhJ/view?usp=drive_link';">
                 <div class="app-icon">
-                    <img src="Remini.png" alt="Logo1" width="100px" height="100px">
+                    <img src="Remini.webp" alt="Logo1" width="100px" height="100px">
                 </div>
                 <div class="app-name">
                     <h1>Remini</h1>
@@ -120,7 +120,7 @@
             <div class="app-info"
                 onclick="window.location.href='https://drive.google.com/file/d/1UWWrc1UyuKg85VBg-5p8g7tIH6c39BJV/view?usp=drive_link';">
                 <div class="app-icon">
-                    <img src="Picsart.png" alt="Logo2" width="100px" height="100px">
+                    <img src="Picsart.webp" alt="Logo2" width="100px" height="100px">
                 </div>
                 <div class="app-name">
                     <h1>Picsart</h1>
@@ -129,7 +129,7 @@
             <div class="app-info"
                 onclick="window.location.href='https://drive.google.com/file/d/1Yqxm_bQJ5m8-Ig1-wrDFkdk7gjASh3qo/view?usp=drive_link';">
                 <div class="app-icon">
-                    <img src="Adobe Lightroom.png" alt="Logo3" width="100px" height="100px">
+                    <img src="Adobe Lightroom.webp" alt="Logo3" width="100px" height="100px">
                 </div>
                 <div class="app-name">
                     <h1>Adobe Lightroom</h1>
@@ -138,7 +138,7 @@
             <div class="app-info"
                 onclick="window.location.href='https://drive.google.com/file/d/1YZ4yQk92z0ImV3Pc42f1hf_E1lOhP-8A/view?usp=drive_link';">
                 <div class="app-icon">
-                    <img src="Capcut.png" alt="Logo4" width="100px" height="100px">
+                    <img src="Capcut.webp" alt="Logo4" width="100px" height="100px">
                 </div>
                 <div class="app-name">
                     <h1>Capcut</h1>
@@ -147,7 +147,7 @@
             <div class="app-info"
                 onclick="window.location.href='https://drive.google.com/file/d/1NmUqekmeAeXQ9qnkx3J4gePVN-2lpmxP/view?usp=drive_link';">
                 <div class="app-icon">
-                    <img src="Snapseed.png" alt="Logo5" width="100px" height="100px">
+                    <img src="Snapseed.webp" alt="Logo5" width="100px" height="100px">
                 </div>
                 <div class="app-name">
                     <h1>Snapseed</h1>
@@ -156,7 +156,7 @@
             <div class="app-info"
                 onclick="window.location.href='https://drive.google.com/file/d/1eRzo6BtlPIHlGL_uYtVV_SD20vlsaUvK/view?usp=drive_link';">
                 <div class="app-icon">
-                    <img src="Trebedit.png" alt="Logo6" width="100px" height="100px">
+                    <img src="Trebedit.webp" alt="Logo6" width="100px" height="100px">
                 </div>
                 <div class="app-name">
                     <h1>Trebedit</h1>
@@ -165,7 +165,7 @@
             <div class="app-info"
                 onclick="window.location.href='https://drive.google.com/file/d/1N4FYGCZ1PjH-94RAW_nSpyRIe9zk0C-7/view?usp=drive_link';">
                 <div class="app-icon">
-                    <img src="Pydroid 3.png" alt="Logo7" width="100px" height="100px">
+                    <img src="Pydroid 3.webp" alt="Logo7" width="100px" height="100px">
                 </div>
                 <div class="app-name">
                     <h1>Pydroid 3</h1>
@@ -174,7 +174,7 @@
             <div class="app-info"
                 onclick="window.location.href='https://drive.google.com/file/d/13SfUc87FN8PUPnJa2PUwjHOKmVikxwga/view?usp=drive_link';">
                 <div class="app-icon">
-                    <img src="Mt Manager.png" alt="Logo8" width="100px" height="100px">
+                    <img src="Mt Manager.webp" alt="Logo8" width="100px" height="100px">
                 </div>
                 <div class="app-name">
                     <h1>Mt Manager</h1>
@@ -183,7 +183,7 @@
             <div class="app-info"
                 onclick="window.location.href='https://drive.google.com/file/d/1v60dOXRGyIAziBHmqzxPAh0Rj4SRsR7k/view?usp=drive_link';">
                 <div class="app-icon">
-                    <img src="GameKey.png" alt="Logo9" width="100px" height="100px">
+                    <img src="GameKey.webp" alt="Logo9" width="100px" height="100px">
                 </div>
                 <div class="app-name">
                     <h1>Game Helper</h1>
@@ -199,7 +199,7 @@
             <div class="app-info"
                 onclick="window.location.href='https://drive.google.com/file/d/1xuVQDHAicClm7dlPksBxW9H0EWcaOxhe/view?usp=drive_link';">
                 <div class="app-icon">
-                    <img src="FlexiOptimizerIYR.png" alt="LogoIYR1" width="100px" height="100px">
+                    <img src="FlexiOptimizerIYR.webp" alt="LogoIYR1" width="100px" height="100px">
                 </div>
                 <div class="app-name">
                     <h1>FlexiOptimizer</h1>
@@ -208,7 +208,7 @@
             <div class="app-info"
                 onclick="window.location.href='https://drive.google.com/file/d/1yIA1akUH9TSvZchyQt89arZp3VRsPKQS/view?usp=drive_link';">
                 <div class="app-icon">
-                    <img src="exam.png" alt="LogoIYR2" width="100px" height="100px">
+                    <img src="exam.webp" alt="LogoIYR2" width="100px" height="100px">
                 </div>
                 <div class="app-name">
                     <h1>Synthèse 1</h1>
